stylesheets/components/TimelineFloatingHeader.scss
// Copyright 2022 Signal Messenger, LLC
// SPDX-License-Identifier: AGPL-3.0-only

.TimelineFloatingHeader {
  align-items: center;
  display: flex;
  flex-direction: column;
  left: 0;
  pointer-events: none;
  position: absolute;
  top: 10px;
  transition: opacity 0.25s ease-out;
  width: 100%;
  z-index: $z-index-above-base;

  &--visible {
    opacity: 1;
  }

  &--hidden {
    opacity: 0;
  }

  &__spinner-container {
    @include timeline-floating-header-node;
    margin-top: 12px;
    padding: 6px;

    &--visible {
      opacity: 1;
    }

    &--hidden {
      opacity: 0;
      transition: opacity 0.25s ease-out 0.3s;
    }
  }
}

